--- a/style.scss
+++ b/style.scss
@@ -19,29 +19,36 @@ $paleOrange: hsl(25, 100%, 94%);
 .navbar {
   padding: 1rem 5rem;
   border-bottom: 1px solid $grayishBlue;
+
   .menu {
     display: none;
   }
+
   @media screen and (max-width: 600px) {
     padding: 1rem;
+
     .logo {
       display: flex;
       align-items: center;
       gap: 1rem;
+
       a img {
         height: 1em;
       }
+
       .menu {
         display: block;
       }
     }
   }
+
   .navlist li {
     position: relative;
     margin: 0 1rem;
     height: 100%;
     // background: teal;
     color: $darkgrayishBlue;
+
     &::after {
       content: "";
       position: absolute;
@@ -53,23 +60,33 @@ $paleOrange: hsl(25, 100%, 94%);
       background-color: $orange;
       opacity: 0;
       transition: all 350ms ease-in-out;
+      @media screen and (max-width: 600px) {
+        display: none;
+      }
     }
+
     &:hover::after {
       left: 0;
       opacity: 1;
+      @media screen and (max-width: 600px) {
+        display: none;
+      }
     }
+
     @media screen and (max-width: 600px) {
       height: auto;
       font-weight: bold;
       color: black;
     }
   }
+
   .navlist {
     .close {
       display: none;
     }
+
     @media screen and (max-width: 600px) {
-      display: none;
+      // display: none;
       flex-flow: column;
       height: 100vh;
       width: 50%;
@@ -83,24 +100,29 @@ $paleOrange: hsl(25, 100%, 94%);
       gap: 10px;
       padding-top: 7rem;
       padding-left: 1rem;
+
       .close {
         display: block;
         position: absolute;
         top: 3rem;
         left: 0;
-        padding-left: 2rem;
+        padding-left: 1rem;
       }
     }
   }
+
   .your_cart {
     position: relative;
+
     .cart-img {
       position: relative;
+
       @media screen and (max-width: 600px) {
         img {
           height: 1em;
         }
       }
+
       .prod_no {
         display: none;
         position: absolute;
@@ -115,6 +137,7 @@ $paleOrange: hsl(25, 100%, 94%);
         border-radius: 10px;
       }
     }
+
     .cart_down {
       display: none;
       position: absolute;
@@ -126,19 +149,23 @@ $paleOrange: hsl(25, 100%, 94%);
       background-color: white;
       border-radius: 10px;
       box-shadow: 2px 10px 20px rgba(0, 0, 0, 0.199);
-      @media screen and (max-width: 600px){
+
+      @media screen and (max-width: 600px) {
         width: 700% !important;
         left: -200% !important;
       }
+
       h2 {
         font-size: 0.8rem;
         font-weight: 700;
         padding: 1rem;
         border-bottom: 1px solid $grayishBlue;
       }
+
       .cart_prods {
         font-size: 0.8rem;
         color: $darkgrayishBlue;
+
         .empty {
           font-weight: 700;
           color: $darkgrayishBlue;
@@ -146,21 +173,26 @@ $paleOrange: hsl(25, 100%, 94%);
       }
     }
   }
+
   .cart {
     position: relative;
     cursor: pointer;
     object-fit: contain;
     margin-right: 2rem;
   }
+
   .prod {
     display: none;
+
     img {
       height: 40px;
     }
+
     .total {
       color: black;
       font-weight: 800;
     }
+
     .delete {
       cursor: pointer;
       height: 1rem;
@@ -173,9 +205,11 @@ $paleOrange: hsl(25, 100%, 94%);
     height: 40px;
     border: 1px solid $orange;
     border-radius: 50%;
+
     &:hover {
       border: 2px solid $orange;
     }
+
     @media screen and (max-width: 600px) {
       height: 30px;
     }
@@ -189,23 +223,28 @@ $paleOrange: hsl(25, 100%, 94%);
     flex-flow: column;
     padding: 0 !important;
   }
+
   .product {
     @media screen and (max-width: 600px) {
       padding: 0;
     }
+
     .current img {
       cursor: crosshair;
       height: 400px;
       max-height: 100%;
       object-fit: cover;
       border-radius: 20px;
+
       @media screen and (max-width: 600px) {
         border-radius: 0;
       }
     }
+
     .images {
       width: 100%;
       margin-top: 2rem;
+
       img {
         cursor: pointer;
         height: 80px;
@@ -215,39 +254,48 @@ $paleOrange: hsl(25, 100%, 94%);
       }
     }
   }
+
   .about {
     @media screen and (max-width: 600px) {
       padding: 1rem;
     }
+
     .brand {
       color: $orange;
       font-size: 0.8rem;
       font-weight: 700;
       letter-spacing: 1px;
     }
+
     .p_name {
       font-size: clamp(2rem, 4vw, 3rem);
       font-weight: 700;
       line-height: 1.3em;
+
       @media screen and (max-width: 600px) {
         line-height: 1.2em;
       }
     }
+
     .description {
       color: $darkgrayishBlue;
+
       @media screen and (min-width: 1000px) {
         max-width: 30vw;
       }
     }
+
     .price {
       @media screen and (max-width: 600px) {
         display: inline-flex !important;
         margin-top: 0;
       }
+
       h1 {
         font-size: 1.3rem;
         font-weight: 700;
       }
+
       span {
         font-size: 0.7rem;
         font-weight: 700;
@@ -257,24 +305,29 @@ $paleOrange: hsl(25, 100%, 94%);
         border-radius: 5px;
       }
     }
+
     .or_price {
       font-size: 0.8rem;
       font-weight: 700;
       color: $grayishBlue;
       text-decoration: line-through;
     }
+
     .buy {
       @media screen and (max-width: 600px) {
         flex-flow: column;
         gap: 1rem;
       }
+
       .quantity {
         background-color: $lightGrayishBlue;
         border-radius: 10px;
+
         @media screen and (max-width: 600px) {
           display: flex;
           justify-content: space-between;
         }
+
         .decre,
         .incre {
           padding: 0.5rem 1rem;
@@ -283,31 +336,38 @@ $paleOrange: hsl(25, 100%, 94%);
           color: $orange;
           flex: 1;
         }
+
         input {
           width: 50px;
           max-width: 100px;
           text-align: center;
           background-color: $lightGrayishBlue;
+
           @media screen and (max-width: 600px) {
             width: 100%;
           }
         }
       }
+
       .add_to_cart {
         background-color: $orange;
         padding: 0.5rem 3rem;
         border-radius: 5px;
         box-shadow: 5px 10px 10px $paleOrange;
+
         .cart {
           fill: white !important;
         }
+
         span {
           color: white;
           font-size: 0.8rem;
+
           @media screen and (max-width: 600px) {
             font-size: 1rem;
           }
         }
+
         @media screen and (max-width: 600px) {
           padding: 1rem !important;
           justify-content: center;
@@ -325,12 +385,14 @@ $paleOrange: hsl(25, 100%, 94%);
     margin-top: 1rem;
   }
 }
+
 //|Utilities
 
 .active {
   opacity: 0.5;
   border: 2px solid $orange;
 }
+
 .visible {
   display: flex !important;
 }
