--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@
     width: 50%;
     position: absolute;
     top: 0;
-    left: 0%;
+    left: -100%;
     background-color: white;
     margin: 0;
     -webkit-box-pack: start !important;
@@ -108,6 +108,8 @@
     gap: 10px;
     padding-top: 7rem;
     padding-left: 1rem;
+    -webkit-transition: all 250ms ease-in-out;
+    transition: all 250ms ease-in-out;
   }
   .navbar .navlist .close {
     display: block;
@@ -362,6 +364,9 @@
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
