--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,10 @@
   box-sizing: border-box;
   font-family: "Kumbh Sans", sans-serif;
 }
+button {
+  border: none;    
+  cursor: pointer;
+}
 
 $darkBlue: hsl(220, 13%, 13%);
 $darkgrayishBlue: hsl(219, 9%, 45%);
@@ -19,6 +23,9 @@ $paleOrange: hsl(25, 100%, 94%);
 .navbar {
   padding: 1rem 5rem;
   border-bottom: 1px solid $grayishBlue;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
   .menu {
     display: none;
@@ -41,13 +48,22 @@ $paleOrange: hsl(25, 100%, 94%);
       }
     }
   }
-
+  .navlist {
+    list-style: none;
+    flex: 1;
+    display: flex;
+    margin-left: 2.5rem;
+  }
   .navlist li {
     position: relative;
     margin: 0 1rem;
     height: 100%;
     // background: teal;
     color: $darkgrayishBlue;
+    a {
+      text-decoration: none;
+      color: $darkgrayishBlue;
+    }
 
     &::after {
       content: "";
@@ -111,6 +127,10 @@ $paleOrange: hsl(25, 100%, 94%);
     }
   }
 
+  .right_panel {
+    display: flex;
+    align-items: center;
+  }
   .your_cart {
     position: relative;
 
@@ -125,6 +145,9 @@ $paleOrange: hsl(25, 100%, 94%);
 
       .prod_no {
         display: none;
+        // display: flex;
+        justify-content: space-between;
+        align-items: center;
         position: absolute;
         height: 18px;
         top: -50%;
@@ -163,8 +186,16 @@ $paleOrange: hsl(25, 100%, 94%);
       }
 
       .cart_prods {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-top: 1.25rem;
         font-size: 0.8rem;
         color: $darkgrayishBlue;
+        .prod {
+          align-items: center;
+          gap: 0.75rem;
+        }
 
         .empty {
           font-weight: 700;
@@ -189,6 +220,7 @@ $paleOrange: hsl(25, 100%, 94%);
     }
 
     .total {
+      margin-left: 1rem;
       color: black;
       font-weight: 800;
     }
@@ -219,12 +251,22 @@ $paleOrange: hsl(25, 100%, 94%);
 //|Product Section
 
 .product_section {
+  display: flex;
+  gap: 1.25rem;
+  padding: 5rem;
+  margin: 0 auto;
   @media screen and (max-width: 600px) {
     flex-flow: column;
     padding: 0 !important;
   }
 
   .product {
+    flex-basis: 50%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    padding: 1.25rem;
+
     @media screen and (max-width: 600px) {
       padding: 0;
     }
@@ -243,6 +285,9 @@ $paleOrange: hsl(25, 100%, 94%);
 
     .images {
       width: 100%;
+      display: flex;
+      justify-content: center;
+      gap: 1.25rem;
       margin-top: 2rem;
 
       img {
@@ -256,6 +301,10 @@ $paleOrange: hsl(25, 100%, 94%);
   }
 
   .about {
+    flex-basis: 50%;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
     @media screen and (max-width: 600px) {
       padding: 1rem;
     }
@@ -271,6 +320,7 @@ $paleOrange: hsl(25, 100%, 94%);
       font-size: clamp(2rem, 4vw, 3rem);
       font-weight: 700;
       line-height: 1.3em;
+      margin-top: 0.75rem;
 
       @media screen and (max-width: 600px) {
         line-height: 1.2em;
@@ -278,6 +328,7 @@ $paleOrange: hsl(25, 100%, 94%);
     }
 
     .description {
+      margin-top: 1.25rem;
       color: $darkgrayishBlue;
 
       @media screen and (min-width: 1000px) {
@@ -286,6 +337,10 @@ $paleOrange: hsl(25, 100%, 94%);
     }
 
     .price {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      margin-top: 1rem;
       @media screen and (max-width: 600px) {
         display: inline-flex !important;
         margin-top: 0;
@@ -314,6 +369,9 @@ $paleOrange: hsl(25, 100%, 94%);
     }
 
     .buy {
+      display: flex;
+      margin-top: 1.25rem;
+      gap: 0.75rem;
       @media screen and (max-width: 600px) {
         flex-flow: column;
         gap: 1rem;
@@ -322,19 +380,25 @@ $paleOrange: hsl(25, 100%, 94%);
       .quantity {
         background-color: $lightGrayishBlue;
         border-radius: 10px;
+        overflow: hidden;
 
         @media screen and (max-width: 600px) {
           display: flex;
           justify-content: space-between;
           align-items: center;
         }
+        .quantity_no {
+          border: none;
+        }
 
         .decre,
         .incre {
+          border: none;
           padding: 0.5rem 1rem;
           font-size: 1.3rem;
           font-weight: 700;
           color: $orange;
+          background: inherit;
           flex: 1;
         }
 
@@ -342,7 +406,7 @@ $paleOrange: hsl(25, 100%, 94%);
           width: 50px;
           max-width: 100px;
           text-align: center;
-          background-color: $lightGrayishBlue;          
+          background-color: $lightGrayishBlue;
           @media screen and (max-width: 600px) {
             width: 100%;
           }
@@ -350,6 +414,9 @@ $paleOrange: hsl(25, 100%, 94%);
       }
 
       .add_to_cart {
+        display: flex;
+        align-items: center;
+        gap: 0.75rem;
         background-color: $orange;
         padding: 0.5rem 3rem;
         border-radius: 5px;
@@ -400,4 +467,3 @@ $paleOrange: hsl(25, 100%, 94%);
 .cart_visible {
   display: block !important;
 }
-
