--- a/style.css
+++ b/style.css
@@ -244,6 +244,12 @@ button {
   gap: 0.75rem;
 }
 
+.navbar .your_cart .cart_down .cart_prods .prod h1 {
+  font-size: 0.8rem;
+  font-weight: 400;
+  color: #68707d;
+}
+
 .navbar .your_cart .cart_down .cart_prods .empty {
   font-weight: 700;
   color: #68707d;
@@ -413,6 +419,7 @@ button {
 }
 
 .product_section .about .description {
+  line-height: 1.5em;
   margin-top: 1.25rem;
   color: #68707d;
 }
@@ -509,7 +516,7 @@ button {
 .product_section .about .buy .quantity .decre,
 .product_section .about .buy .quantity .incre {
   border: none;
-  padding: 0.5rem 1rem;
+  padding: 0.8rem 1rem;
   font-size: 1.3rem;
   font-weight: 700;
   color: #ff7d1a;
